Fix: Fixed spacing issues on the home page

--- a/src/Components/HomeTab/TabHome.scss
+++ b/src/Components/HomeTab/TabHome.scss
@@ -6,7 +6,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  margin-top: 70px !important;
+  margin-top: 20px !important;
   z-index: 10;
 }
 
